--- a/demo/index.html
+++ b/demo/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <ul>
-    <li><a href="#/page/1">Page one</a></li>
-    <li><a href="#/page/2">Page two</a></li>
-    <li><a href="#/fake">Bad route</a></li>
+    <li><a href="#/page/1">Page one (/page/1)</a></li>
+    <li><a href="#/page/2">Page two (/page/2)</a></li>
+    <li><a href="#/fake">Bad route (/fake)</a></li>
   </ul>
 
   <hr>
